--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,7 @@ dependencies:
   flutter_map: any
     #git:
     #  url: https://github.com/johnpryan/flutter_map.git
-  latlong:
-    git:
-      url: git://github.com/lutfiadysh/dart-latlong.git
-
+  latlong2: ^0.8.1
   flutter_map_dragmarker:
     git:
       url: https://github.com/ibrierley/flutter_map_dragmarker.git         
